## llama_api.py

from typing import List

class LLAMAAPI:
    """A class to handle fuzzy matching using the LLAMA 3 API."""

    def __init__(self, api_key: str = "default_api_key", api_url: str = "https://api.default.com"):
        """Initializes the LLAMAAPI with the necessary API credentials.

        Args:
            api_key (str): The API key for authentication.
            api_url (str): The base URL for the LLAMA 3 API.
        """
        self.api_key = api_key
        self.api_url = api_url

    def fuzzy_match(self, data1: List[List[float]], data2: List[List[float]]) -> List[dict]:
        """Performs fuzzy matching between two sets of data embeddings.

        Args:
            data1 (List[List[float]]): The first list of data embeddings.
            data2 (List[List[float]]): The second list of data embeddings.

        Returns:
            List[dict]: A list of dictionaries containing matched data pairs and their similarity scores.
        """
        # Placeholder for fuzzy matching logic
        # In a real implementation, this would involve making a request to the LLAMA 3 API
        matched_data = []
        for i, embedding1 in enumerate(data1):
            for j, embedding2 in enumerate(data2):
                # Simulate a similarity score calculation
                similarity_score = self._calculate_similarity(embedding1, embedding2)
                if similarity_score > 0.8:  # Example threshold for a match
                    matched_data.append({
                        "index1": i,
                        "index2": j,
                        "similarity": similarity_score
                    })
                    print(f"Match found between data1[{i}] and data2[{j}] with similarity {similarity_score}.")
        return matched_data

    def _calculate_similarity(self, embedding1: List[float], embedding2: List[float]) -> float:
        """Calculates a similarity score between two embeddings.

        Args:
            embedding1 (List[float]): The first embedding.
            embedding2 (List[float]): The second embedding.

        Returns:
            float: The calculated similarity score.
        """
        # Placeholder for similarity calculation logic
        # In a real implementation, this might use cosine similarity or another metric
        similarity_score = sum(e1 * e2 for e1, e2 in zip(embedding1, embedding2)) / (len(embedding1) or 1)
        return similarity_score
